--- a/OLFFI/Info.plist
+++ b/OLFFI/Info.plist
@@ -36,6 +36,12 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>FacebookAppID</key>
+    <string>914173908638832</string>
+    <key>FacebookDisplayName</key>
+    <string>Olffi</string>
+    <key>LIAppId</key>
+    <string>77q5ab5q2jsqzt</string>
     <key>CFBundleURLTypes</key>
     <array>
         <dict>
@@ -46,20 +52,28 @@
             </array>
         </dict>
     </array>
-    <key>FacebookAppID</key>
-    <string>914173908638832</string>
-    <key>FacebookDisplayName</key>
-    <string>Olffi</string>
-    
     <key>LSApplicationQueriesSchemes</key>
     <array>
         <string>fbapi</string>
         <string>fb-messenger-api</string>
-        <string>fbauth2</string>
         <string>fbshareextension</string>
+        <string>fbapi</string>
+        <string>fbapi20130214</string>
+        <string>fbapi20130410</string>
+        <string>fbapi20130702</string>
+        <string>fbapi20131010</string>
+        <string>fbapi20131219</string>
+        <string>fbapi20140410</string>
+        <string>fbapi20140116</string>
+        <string>fbapi20150313</string>
+        <string>fbapi20150629</string>
+        <string>fbauth</string>
+        <string>fbauth2</string>
+        <string>fb-messenger-api20140430</string>
+        <string>linkedin</string>
+        <string>linkedin-sdk2</string>
+        <string>linkedin-sdk</string>
     </array>
     
-    <key>LIAppId</key>
-    <string>77q5ab5q2jsqzt</string>
 </dict>
 </plist>
