--- a/OLFFI/Info.plist
+++ b/OLFFI/Info.plist
@@ -81,5 +81,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Arvo-Bold.ttf</string>
+		<string>Arvo-Regular.ttf</string>
+	</array>
 </dict>
 </plist>
